--- a/app/src/main/res/menu/activity_formulario_aluno_menu.xml
+++ b/app/src/main/res/menu/activity_formulario_aluno_menu.xml
@@ -5,5 +5,5 @@
     <item android:id="@+id/activity_formulario_aluno_menu_salvar"
         app:showAsAction="always"
         android:icon="@drawable/ic_action_save_aluno"
-        android:title="Salvar"/>
+        android:title="@string/salvar"/>
 </menu>
